# ynab-import

./: .bumpversion.cfg  .bumpversion.toml  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.MD  README.md  pyproject.toml  ruff.toml  swedbank.csv  swedbank_to_ynab.py  ynab.csv
.github/workflows/: bump-version.yml  ci.yml  lint.yml  pre_release.yml  publish-test.yml  publish.yml  pythonapp.yml  release.yml  test-suit.yml  test.yml
docs/superpowers/plans/: 2026-04-17-cicd-workflows-implementation.md  2026-04-17-modernize-project-revised.md  2026-04-17-modernize-project.md  2026-04-18-versioning-publishing-strategy-implementation.md  2026-04-19-bump-my-version-refactor-implementation.md  2026-04-19-fix-broken-core-paths.md
docs/superpowers/specs/: 2026-04-17-cicd-workflows-design.md  2026-04-18-versioning-publishing-strategy.md  2026-04-19-bump-my-version-refactor.md  2026-04-19-fix-broken-core-paths-design.md
scripts/: bump-version.sh  check-version-changed.sh
tests/: conftest.py  test_ynab_api.py
tests/common/: test_transformers.py
tests/infra/: test_ynab.py
tests/swedbank/: swedbank.csv  test_providers.py  test_transformers.py
tests/tbc/: test_providers.py
tests/tbc/data/: tbc.csv
ynab_import/: __init__.py  __main__.py  cli.py  main.py  settings.py  setup.py
ynab_import/common/: __init__.py  models.py  providers.py  settings.py  transformers.py
ynab_import/core/: __init__.py  interactions.py  models.py  providers.py  transformers.py
ynab_import/infra/: __init__.py  http.py  ynab.py
ynab_import/infra/revolut/: providers.py  transformers.py
ynab_import/infra/swedbank/: providers.py
ynab_import/infra/tbc/: models.py  providers.py
ynab_import/revolut/: models.py  providers.py  transformers.py
ynab_import/runner/: __init__.py  cli.py
ynab_import/swedbank/: models.py  providers.py  transformers.py
ynab_import/ynab/: providers.py  ynab_api.py
